{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 8,
  "lineage": "5de077b4-aaa2-f179-a5cc-660ce1b3fb3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iti-public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:257126637108:instance/i-06c94a41bbe2a3b16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c94a41bbe2a3b16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a93b227c372b5da",
            "private_dns": "ip-10-0-0-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.120",
            "public_ip": "44.200.95.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01715c1bd5ff5bfd3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d07f44398243e61",
            "tags": {
              "Name": "iti-public-ec2"
            },
            "tags_all": {
              "Name": "iti-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d4cc28ddcf90f26"
            ]
          },
          "dependencies": [
            "aws_security_group.iti-public-sg",
            "aws_subnet.iti-public-subnet",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257126637108:internet-gateway/igw-01ab43265dc3f1482",
            "id": "igw-01ab43265dc3f1482",
            "owner_id": "257126637108",
            "tags": {
              "Name": "main-gw"
            },
            "tags_all": {
              "Name": "main-gw"
            },
            "vpc_id": "vpc-093d607b8fc18bbca"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iti-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257126637108:route-table/rtb-0574cb3984a93b71a",
            "id": "rtb-0574cb3984a93b71a",
            "owner_id": "257126637108",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ab43265dc3f1482",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti-public-rt"
            },
            "tags_all": {
              "Name": "iti-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d607b8fc18bbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iti-gw",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iti-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b569a7e15bb028b",
            "route_table_id": "rtb-0574cb3984a93b71a",
            "subnet_id": "subnet-00d07f44398243e61"
          },
          "dependencies": [
            "aws_internet_gateway.iti-gw",
            "aws_route_table.iti-public-rt",
            "aws_subnet.iti-public-subnet",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "iti-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257126637108:security-group/sg-07d4cc28ddcf90f26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d4cc28ddcf90f26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230119093857447600000001",
            "name_prefix": "terraform-",
            "owner_id": "257126637108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iti-public-sg",
              "description": "iti-public-sg1"
            },
            "tags_all": {
              "Name": "iti-public-sg",
              "description": "iti-public-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d607b8fc18bbca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257126637108:subnet/subnet-00d07f44398243e61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d07f44398243e61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257126637108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iti-public-subnet"
            },
            "tags_all": {
              "Name": "iti-public-subnet"
            },
            "vpc_id": "vpc-093d607b8fc18bbca"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257126637108:vpc/vpc-093d607b8fc18bbca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd7b3b2064dc7219",
            "default_route_table_id": "rtb-02ac949b1c7afed3a",
            "default_security_group_id": "sg-0a2eb3237da056c76",
            "dhcp_options_id": "dopt-09a62b26bbdc9d5f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093d607b8fc18bbca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ac949b1c7afed3a",
            "owner_id": "257126637108",
            "tags": {
              "Name": "iti-vpc"
            },
            "tags_all": {
              "Name": "iti-vpc"
            }
          }
        }
      ]
    }
  ]
}